# Lidar2OSM

./: .gitignore  LICENSE  README.md  config.yaml  environment.yaml  lidar2osm_cli.py  pyproject.toml  test_idea.py
composite_bki/: README.md  continuous_map_train_test.py  requirements.txt
composite_bki/benchmarks/: kernel_ablation_benchmark.py  noise_benchmark.py  osm_only_benchmark.py  osm_randomization_benchmark.py  osm_then_bki_benchmark.py
composite_bki/configs/: mcd_config.yaml  mcd_config_strict.yaml  mcd_config_v2.yaml
composite_bki/ros_example/: package.xml  setup.cfg  setup.py
composite_bki/scripts/: basic_usage.py  convert_kitti_to_mcd.py  convert_osm_xml_to_bin.py  learn_confusion_matrix.py  visualize_osm.py
composite_bki/src/: BUILD_INSTRUCTIONS.sh  MANIFEST.in  Makefile  cli.py  pyproject.toml  setup.py
composite_bki/src/composite_bki_cpp/: bindings.cpp  bindings.pyx  composite_bki.cpp  composite_bki.hpp  composite_bki_gpu.cu  composite_bki_utils.cpp  composite_bki_wrapper.pyx  continuous_bki.cpp  continuous_bki.hpp  yaml_parser.hpp
config/internal/: ablation_config.yaml  data_cfg_cu_multi.yaml
create_semantic_maps/: create_global_sem_map_octree.py  test_octree_simple.py  view_poses_on_osm.py
create_semantic_maps/osm_build_ext/: extend_building_offsets.py  pointcloud_npy_to_ply.py  relabel_dense_semantics.py  relabel_osm_semantics.py
create_semantic_maps/relabeling_scans_tests/: relabel_maps.py  relabel_scans.py
create_semantic_maps/ros2_bag_creation/: create_ros2_global_lidar.py  create_ros2_global_lidar_octomap.py  create_ros2_global_lidar_octomap_new.py  create_ros2_lidar_bag.py  merge_ros2_bags2.py
docker/: Dockerfile_ROS2  build_docker.sh  run_and_enter_container.bash
lidar2osm/: __init__.py  create_global_sem_map.py  create_ros2_global_lidar_octomap.py  create_ros2_lidar_bag.py  relabel_scans.py  select_osm_build_boundary_tests.py
lidar2osm/config/: data_cfg_cu_multi.yaml  data_cfg_kitti360.yaml  (+1 more)
scripts/: ablate_lidar2osm.py  extract.py  gaussian_plot.py  geo_path_test.py  infer.py  infer_cumulti.py  morton_ordering.py  train.py  vis_inferred.py  visualize_full_algorithm.py  visualize_full_pc.py
test_scripts/: view_poses_on_osm_semantic.py  view_roads.py
(+126 files in other folders)
